aks/opensearch/ingress-opensearch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-protocol: "https"
spec:
  rules:
  - host: opensearch.etreem.io
    http:
      paths:
      - path: /
        backend:
          service:
            name: opensearch-cluster-master
            port:
              number: 9200
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: opensearch-dashboard.etreem.io
    http:
      paths:
      - path: /
        backend:
          service:
            name: opensearch-dashboard-opensearch-dashboards
            port:
              number: 5601
        pathType: Prefix
